# sutradhar-film-finder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: pages.yml  tier1.yml  tier2.yml
alembic/: env.py
alembic/versions/: a41f09c3d7e2_uniqueness_hardening.py  bb22e78ff305_pgvector_chunk_schema.py  c636e4be00a5_initial_graph_schema.py
data-pipeline/: README.md  build_graph.py  conflict_resolutions.yaml  enrich_tmdb.py  extract_candidates.py  fetch_plots.py  graph_demo.py  graph_report.py  ingest_spine.py  load_akas.py  rekey_titles.py  resolve_conflicts.py  review_candidates.py  review_decisions_20260702.yaml  seed_graph_ci.py  seed_slice.yaml  training_decoys.yaml  training_slice.yaml
docs/: BENCHMARKS.md  DATA_SOURCES.md  DECISIONS.md  GOLDEN_SET_SCENARIOS.md  LICENSING.md  PORTFOLIO.md  ROADMAP.md  RUNBOOK.md  SCALE.md
docs/phases/: P0_SPEC.md  P1_SPEC.md  P2_SPEC.md  P3_SPEC.md  P4_SPEC.md  P5_SPEC.md  P6_SPEC.md  P7_SPEC.md  TOOL_SCHEMA.md  tool_schema.v0.json
evals/: README.md  build_golden.py  calibrate_no_match.py  judge_validate.py  mock_llm.py  rejudge_run.py  run_generation_eval.py  run_injection_eval.py  run_retrieval_eval.py
evals/generation_runs/: 20260703T001051Z-c62806c0.json  20260703T012339Z-e7fff041.json  20260703T012339Z-e7fff041.trace.json  20260704T093206Z-e9598564.json  20260704T093206Z-e9598564.trace.json  20260704T093942Z-f6ce2af8.json  20260704T093942Z-f6ce2af8.trace.json  20260704T094052Z-36dd6f68.json  20260719T063002Z-1bf3cd3e.json  20260719T063002Z-1bf3cd3e.trace.json  PINNED_RUN
evals/golden/: gs01_drishyam_family.yaml  gs02_no_match.yaml  gs03_plot_only.yaml  gs04_baahubali_dub.yaml  gs05_devdas_source.yaml  gs06_drishyam2_lineage.yaml  gs07_code_mixed.yaml  gs08_backtracking.yaml  gs09_cross_border.yaml  gs10_title_collision.yaml  gs11_fuzzy_title.yaml
evals/injection/: fixtures.yaml
evals/injection_runs/: inj-off-dryrun.json  inj-off-live.json  inj-on-dryrun.json  inj-on-live.json
evals/judge_validation/: PROTOCOL.md  report.json  report_testretest.json  worksheet.blind.key.json  worksheet.blind.yaml  worksheet.key.json  worksheet.yaml
evals/negatives/: heldout.yaml
evals/prompts/: exemplars_v1.md  intent_taxonomy_v1.json  judge_coherence_v1.md  judge_faithfulness_v1.md  prompts.lock.json  prompts.serving.lock.json  spotlighting_appendix_v1_1.md  system_v1.md
evals/retrieval_runs/: 20260702T135315Z-f6583183.calibration.json  20260702T135315Z-f6583183.json  20260702T135315Z-f6583183.meta.json
evals/serving_runs/: servewin-25c029d3.MANIFEST.sha256  servewin-25c029d3.json
finetune/: README.md  build_dataset.py  dataset_card.json  export_training_entities.py  ft_dryrun.py  ft_dryrun_report.json  ft_v1_sample.jsonl  ft_verdict.py  gemma4_train_template.jinja  gpu_window.py  merge_adapter.py  scaffold_snapshot.json  teacher_run_summary.json  train_qlora.py  training_slice_entities.json  window_runs.json
finetune/prompts/: teacher_rewrite_v1.md
infra/: README.md  docker-compose.yml
infra/app/: Dockerfile
infra/gpu/: __init__.py  jarvis.py  p7_judge_window.py
infra/langfuse/: Caddyfile  README.md  backup_langfuse.sh  provision.py
infra/mlflow/: Dockerfile
rag-engine/: README.md  build_corpus.py  demo.py  embed_and_score.py  export_gpu_inputs.py  load_index.py  serve_embed_rerank.py
serving/: README.md
site/: generate.py
src/sutradhar/: __init__.py  toolcalls.py
src/sutradhar/config/: __init__.py  settings.py
src/sutradhar/evals/: __init__.py  calibration.py  driver.py  generation.py  generation_run.py  golden.py  injection.py  judge.py  judge_validation.py  negatives.py  prompts.py  ragas_metrics.py  retrieval.py
src/sutradhar/finetune/: __init__.py  dataset.py  render.py  scaffold.py  snapshot.py  teacher.py  train.py  validate.py  verdict.py
src/sutradhar/graph/: __init__.py  db.py  models.py  repository.py  schema.py
src/sutradhar/obs/: __init__.py  cost.py  mlflow_log.py  tracing.py
src/sutradhar/pipeline/: __init__.py  build.py  extract.py  imdb.py  normalize.py  precedence.py  report.py  review.py  seed.py  snapshots.py  titles.py  tmdb.py  wikidata.py  wikipedia.py
src/sutradhar/rag/: __init__.py  artifacts.py  calibration.py  chunking.py  corpus.py  fusion.py  gpu_jobs.py  index.py  providers.py  retrieve.py  sparse.py
tests/: test_api.py  test_api_security.py  test_artifacts.py  test_build.py  test_calibration.py  test_chunking.py  test_ci_workflows.py  test_claims_lint.py  test_cost_accounting.py  test_demo_stack.py  test_dockerfile_hardening.py  test_driver.py  test_embed_and_score_stub.py  test_embed_session.py  test_emitted_tool_calls_validate.py  test_extract.py  test_ft_dataset_schema.py  test_ft_mix_quotas.py  test_ft_render_masking.py  test_ft_scaffold_grounding.py  test_ft_sealed_sample.py  test_ft_session.py  test_ft_teacher.py  test_ft_train_config.py  test_ft_training_slice_disjoint.py  test_ft_validate.py  test_ft_verdict_rule.py  test_fusion_sparse.py  test_generation_metrics.py  test_generation_run.py  test_golden_generation_labels.py  test_golden_generation_regressions.py  test_golden_retrieval_regressions.py  test_gpu_jobs.py  test_graph_models.py  test_graph_schema.py  test_guardrails.py  test_hf_check.py  test_imdb.py  test_injection_suite.py  (+37 more)
tests/e2e/: e2e_server.py
tests/integration/: ci_review_pass.py  scripted_model.py  test_api_golden_regressions.py  test_build_corpus.py  test_chunk_schema.py  test_compose_stack.py  test_driver_e2e.py  test_enrich_tmdb.py  test_extract_candidates.py  test_fetch_plots.py  test_ft_snapshot_export.py  test_golden_fixtures.py  test_golden_regressions.py  test_graph_report.py  test_graph_schema.py  test_ingest_spine.py  test_load_akas.py  test_load_index.py  test_negatives_absent.py  test_repository.py  test_repository_schema.py  test_retrieve_pipeline.py  test_review_gate.py  test_sparse_scoring.py  test_uniqueness_constraints.py
ui/: README.md
ui/app/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+50 files in other folders)
