[project]
name = "sutradhar"
version = "0.0.0"
description = "Sutradhar — multilingual assistant that finds Indian films from story/plot/cast, remake- and dub-aware."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sutradhar" }]
# Runtime dependencies are added by the tasks that introduce them (config/serving/hf),
# keeping each P0 commit small and focused.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "openai>=1.40",
    "huggingface-hub>=1.0",
    # Graph store (P1, DEC-P1-2): typed ORM schema + migrations over Postgres.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # Seed-slice loading (P1 task 3).
    "pyyaml>=6.0",
    # Ingestion connectors + CLIs (P1 task 4+): httpx per P1_SPEC §2.8, typer per DEC-P1-6.
    "httpx>=0.27",
    "typer>=0.12",
    "indic-transliteration>=2.3.82",
    "rapidfuzz>=3.14.5",
    "pgvector>=0.4.2",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
    # Integration-test client for Redis in the local compose stack (not a runtime dep).
    # (psycopg moved to runtime deps in P1: the graph store is application code.)
    "redis>=5.0",
    # On-demand GPU lifecycle (infra/gpu/jarvis.py) — used only by make gpu-validate/nuke.
    "jarvislabs>=0.2",
    # Type stubs for mypy-strict (yaml used by sutradhar.pipeline.seed + CI meta-tests).
    "types-pyyaml>=6.0",
    "jsonschema>=4.26.0",
]
# GPU-session-only deps (P2_SPEC §2.7): synced ON THE INSTANCE via `uv sync --group gpu`.
# Never installed on the laptop/CI — `uv sync` (default: dev) keeps the local env
# neural-free (ROADMAP §2); FlagEmbedding pulls torch/transformers.
gpu = [
    "flagembedding>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sutradhar"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, Pyflakes, isort, pep8-naming, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Third-party SDK without type stubs (used only by infra/gpu/jarvis.py).
module = ["jarvislabs.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pgvector-python ships no py.typed; its SQLAlchemy types (Vector/SPARSEVEC) are SQL glue.
module = ["pgvector.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Pure-Python transliteration lib without py.typed (DEC-P1-5; sutradhar.pipeline.normalize).
module = ["indic_transliteration.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests (compose stack) are opt-in; unit CI stays hermetic and Docker-free.
addopts = "-q -m 'not integration'"
markers = [
    "integration: tests that require the local docker-compose stack (Postgres+Redis)",
]
